# Agent-Gatsby

./: .gitignore  AGENTS.md  PRD.md  README.md  SPRINTBOARD.md  TASKS.md  config.yaml  pyproject.toml  requirements.txt
.codex/: config.toml
config/: config.yaml  config_5page.yaml
config/prompts/: critic.md  draft.md  dynamic_validation_critic.md  extractor.md  final_forensic_audit.md  ledger.md  outline.md  style_simplifier.md  translation_qa.md  translator_es.md  translator_es_cleanup.md  translator_zh.md  translator_zh_cleanup.md
data/source/: README.md
fonts/: README.md
outputs/: final_manifest.json
src/agent_gatsby/: __init__.py  bilingual_qa.py  build_evidence_ledger.py  citation_registry.py  compare_inference_paths.py  config.py  critique_and_edit.py  data_ingest.py  draft_english.py  extract_metaphors.py  final_artifact_audit.py  index_text.py  llm_client.py  logging_utils.py  manifest_writer.py  normalize.py  orchestrator.py  pdf_compiler.py  plan_outline.py  schemas.py  translate_mandarin.py  translate_spanish.py  translation_common.py  (+1 more)
tests/: test_bilingual_qa.py  test_citation_registry.py  test_config.py  test_draft_english.py  test_editorial_integrity.py  test_evidence_ledger.py  test_final_artifact_audit.py  test_hashing.py  test_llm_client.py  test_logging_utils.py  test_manifest_writer.py  test_metaphor_candidates.py  test_normalize.py  test_normalize_full_source.py  test_orchestrator.py  test_outline.py  test_package_init.py  test_passage_index.py  test_pdf_unicode.py  test_quote_verification.py  test_schemas.py  test_translation_integrity.py
(+1 files in other folders)
